# DistributedSystems

./: .gitignore  .gitmodules
Lab1/excercises/: UDPClient.java  UDPClient.py  UDPServer.java
Lab2/excercise/: models.py  polls.py
Lab2/homework/rest-service/: Cargo.toml
Lab2/homework/rest-service/src/: components.rs  main.rs  requests.rs  responses.rs
Lab2/homework/rest-service/src/models/: forecast.rs  location.rs  mod.rs  sun.rs
